@@ -33,22 +33,18 @@ public class DashboardService {
      * 대시보드 전체 조회
      * 전체레시피, 오늘의 좋아요,오늘의 신규레시피 ->count
      * 한식,중식,일식,양식,디저트 ->카테고리 ENUM
-     * 해당 카테고리의 인기 레시피1개만 -> 해당 Recipe(title,nickname,시간,좋아요,설명)
+     *
      */
     public DashboardResponseDto dashboards() {
 
         DashboardSummaryResponseDto summary = summary();//오늘 집계 사용
 
-        //각 카테고리 베스트 레시피 1건씩 수집
-        List<CategoryBestRecipeResponseDto> bestRecipe = Arrays.stream(RecipeCategory.values()).map(this::categoryRecipe)
-                .collect(Collectors.toList());
 
         return DashboardResponseDto.builder()
                 .totalRecipeCount(summary.getTotalRecipeCount())
                 .todayLikeCount(summary.getTodayLikeCount())
                 .todayNewRecipeCount(summary.getTodayRecipeCount())
-                .categories(Arrays.asList(RecipeCategory.values())) //배열 -> List 컬렉션 래핑
-                .bestRecipe(bestRecipe)
+                .categories(List.of(RecipeCategory.values()))
                 .build();
 
     }
@@ -57,13 +53,16 @@ public class DashboardService {
 //    }
 
     /**
-     * 카테고리 TOP_RECIPE 조회 로직
-     * @param category
-     * @return
+     * 오늘의 카테고리별  TOP_RECIPE 조회 로직
      */
     public CategoryBestRecipeResponseDto categoryRecipe(RecipeCategory category) {
 
-        Recipe recipe = recipeRepository.findTop1ByCategoryOrderByLikesDescCreatedAtDesc(category);
+        //당일 날짜 계산하기
+        LocalDate today = LocalDate.now();
+        LocalDateTime start = today.atStartOfDay();
+        LocalDateTime end = today.atTime(LocalTime.MAX);
+
+        Recipe recipe = recipeRepository.findTop1ByCategoryOrderByLikesDescCreatedAtDesc(category,start,end);
 
         if (recipe == null) {
             throw new CustomException(ErrorCode.DASHBOARD_TOPRECIPE_NOT_FOUND);
@@ -76,7 +75,6 @@ public class DashboardService {
                 .likes(recipe.getLikes())
                 .description(recipe.getContent())
                 .build();
-
     }
 
     /**
